# xpav

./: Cargo.toml  Dockerfile  README.md  config.example.toml  rust-toolchain.toml  xpav.service
.cargo/: config.toml
benches/: state_store_bench.rs
config/: xpav.toml
examples/: scan_test.rs
src/: allowlist.rs  config.rs  config_broadcast.rs  lib.rs  main.rs  metrics.rs  persistence.rs
src/correlation/: window.rs
src/detection/: mod.rs
src/monitors/: container.rs  ebpf_native.rs  fanotify.rs  mod.rs  netlink.rs  network.rs  process.rs
src/response/: actions.rs  mod.rs
src/scanner/: mod.rs  webshell.rs  yara.rs
src/state/: connection.rs  process.rs
tests/: correlation_tests.rs  production_tests.rs  unit_tests.rs
tests/production/: evasion.rs  integration.rs  mod.rs  scenarios.rs  stress.rs
tests/proptest/: dedup_props.rs
tests/unit/: entropy_tests.rs  state_tests.rs
xpav/: Cargo.toml
xpav-common/: Cargo.toml
xpav-common/src/: lib.rs
xpav-ebpf/: Cargo.toml
xpav-ebpf/src/: main.rs
xpav/benches/: scanner_bench.rs
xpav/examples/: ebpf_test.rs
xpav/src/: allowlist.rs  config.rs  lib.rs  util.rs
xpav/src/correlation/: enrichment.rs  mod.rs  patterns.rs  scoring.rs
xpav/src/detection/: mod.rs
xpav/src/monitors/: container.rs  ebpf.rs  ebpf_common.rs  ebpf_native.rs  fanotify.rs  integrity.rs  memory.rs  mod.rs  network.rs  persistence.rs  process.rs
xpav/src/response/: actions.rs  mod.rs
xpav/src/scanner/: entropy.rs  framework.rs  mod.rs  webshell.rs
xpav/src/state/: dedup.rs  mod.rs  threat.rs
xpav/tests/: proptest_tests.rs
xpav/tests/correlation/: mod.rs  pattern_tests.rs  window_tests.rs
xpav/tests/mocks/: mod.rs
xpav/tests/production/: false_positives.rs  fixtures.rs
xpav/tests/proptest/: entropy_props.rs  mod.rs
xpav/tests/unit/: mod.rs  webshell_tests.rs
xtask/: Cargo.toml
xtask/src/: main.rs
