[package]
name = "xpav"
version = "0.1.0"
edition = "2024"
authors = ["Julius C (REIUK LTD)"]
description = "☧ Chi Rho Anti-Virus - Behavioral threat detection for Linux"
license = "MIT"
repository = "https://github.com/JNC4/xpav"

[features]
default = ["metrics", "webhooks"]
metrics = ["dep:axum", "dep:prometheus"]
webhooks = ["dep:reqwest"]

[dependencies]
# Async runtime - only features we actually need
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "fs", "net", "io-util"] }

# Linux syscall wrappers
nix = { version = "0.29", features = ["process", "signal", "fs", "net", "fanotify"] }

# Configuration
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# File watching (inotify wrapper)
notify = "8"

# Regex for pattern matching
regex = "1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory walking
walkdir = "2"

# Hex encoding/decoding for shellcode patterns
hex = "0.4"

# C library bindings for sysconf
libc = "0.2"

# Lazy initialization
once_cell = "1"

# Optional: HTTP client for webhooks (rustls = smaller than OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

# Optional: Metrics and health endpoint
axum = { version = "0.8", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"  # Optimize for size
