[workspace]
resolver = "2"
members = ["xpav", "xpav-common", "xpav-ebpf", "xtask"]

[workspace.package]
version = "0.1.0"
authors = ["Julius C (REIUK LTD)"]
license = "MIT"
repository = "https://github.com/JNC4/xpav"

[workspace.dependencies]
# Aya ecosystem
aya = { version = "0.12", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-ebpf-macros = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"

# Common dependencies
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal", "fs", "net", "io-util"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
bytes = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

# eBPF programs need specific optimization settings
[profile.dev.package.xpav-ebpf]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.xpav-ebpf]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1
